# Interactive-quiz-analytics

./: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
analytics/: __init__.py  anonymize.py  difficulty.py  latex_utils.py  parser.py  pdf_export.py  prt_analysis.py  question_details.py  question_metrics.py  quiz_metrics.py  response_analysis.py  summary.py  syntax_analysis.py  ui_theme.py  upload_cache.py  validation.py
ernest-analytics/: .eslintrc.json
pages/: Question_Analysis_Section.py  Question_and_Quiz_Analysis.py  Quiz_Analysis_Section.py
sample_data/: mat1_numeri_complessi-Espressioni-responses.csv  mat1_numeri_complessi-Modulo e argomento-responses.csv  mat1_numeri_complessi-Operazioni di base in forma algebrica-responses.csv  mat1_numeri_complessi-Potenze e Radici-responses.csv
streamlit_demo/: Home.py  README.md
streamlit_demo/pages/: Quiz_Analysis_Section.py
tests/: test_question_analytics.py
