[tool.poetry]
name = "tech-for-good-education-team"
version = "0.1.0"
description = "Experiment repo for tech for good education team"
authors = ["Juma Zevick Otieno <jumazevick@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false  # ✅ move this line here

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
openpyxl = "^3.1.3"
streamlit = "^1.35.0"
xlrd = "^2.0.1"
plotly = "^5.22.0"
reportlab = "^4.2.0"
kaleido = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
